MetaShader/GLSLPreParser.cpp

// Generated from GLSLPreParser.g4 by ANTLR 4.10


#include "GLSLPreParserListener.h"
#include "GLSLPreParserVisitor.h"

#include "GLSLPreParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct GLSLPreParserStaticData final {
  GLSLPreParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  GLSLPreParserStaticData(const GLSLPreParserStaticData&) = delete;
  GLSLPreParserStaticData(GLSLPreParserStaticData&&) = delete;
  GLSLPreParserStaticData& operator=(const GLSLPreParserStaticData&) = delete;
  GLSLPreParserStaticData& operator=(GLSLPreParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag glslpreparserParserOnceFlag;
GLSLPreParserStaticData *glslpreparserParserStaticData = nullptr;

void glslpreparserParserInitialize() {
  assert(glslpreparserParserStaticData == nullptr);
  auto staticData = std::make_unique<GLSLPreParserStaticData>(
    std::vector<std::string>{
      "translation_unit", "compiler_directive", "behavior", "constant_expression", 
      "define_directive", "elif_directive", "else_directive", "endif_directive", 
      "error_directive", "error_message", "extension_directive", "extension_name", 
      "group_of_lines", "if_directive", "ifdef_directive", "ifndef_directive", 
      "line_directive", "line_expression", "macro_esc_newline", "macro_identifier", 
      "macro_name", "macro_text", "macro_text_", "number", "off", "on", 
      "pragma_debug", "pragma_directive", "pragma_optimize", "profile", 
      "program_text", "stdgl", "undef_directive", "version_directive"
    },
    std::vector<std::string>{
      "", "'atomic_uint'", "'attribute'", "'bool'", "'break'", "'buffer'", 
      "'bvec2'", "'bvec3'", "'bvec4'", "'case'", "'centroid'", "'coherent'", 
      "'const'", "'continue'", "'default'", "'discard'", "'dmat2'", "'dmat2x2'", 
      "'dmat2x3'", "'dmat2x4'", "'dmat3'", "'dmat3x2'", "'dmat3x3'", "'dmat3x4'", 
      "'dmat4'", "'dmat4x2'", "'dmat4x3'", "'dmat4x4'", "'do'", "'double'", 
      "'dvec2'", "'dvec3'", "'dvec4'", "'else'", "'false'", "'flat'", "'float'", 
      "'for'", "'highp'", "'if'", "'iimage1D'", "'iimage1DArray'", "'iimage2D'", 
      "'iimage2DArray'", "'iimage2DMS'", "'iimage2DMSArray'", "'iimage2DRect'", 
      "'iimage3D'", "'iimageBuffer'", "'iimageCube'", "'iimageCubeArray'", 
      "'image1D'", "'image1DArray'", "'image2D'", "'image2DArray'", "'image2DMS'", 
      "'image2DMSArray'", "'image2DRect'", "'image3D'", "'imageBuffer'", 
      "'imageCube'", "'imageCubeArray'", "'in'", "'inout'", "'int'", "'invariant'", 
      "'isampler1D'", "'isampler1DArray'", "'isampler2D'", "'isampler2DArray'", 
      "'isampler2DMS'", "'isampler2DMSArray'", "'isampler2DRect'", "'isampler3D'", 
      "'isamplerBuffer'", "'isamplerCube'", "'isamplerCubeArray'", "'isubpassInput'", 
      "'isubpassInputMS'", "'itexture1D'", "'itexture1DArray'", "'itexture2D'", 
      "'itexture2DArray'", "'itexture2DMS'", "'itexture2DMSArray'", "'itexture2DRect'", 
      "'itexture3D'", "'itextureBuffer'", "'itextureCube'", "'itextureCubeArray'", 
      "'ivec2'", "'ivec3'", "'ivec4'", "'layout'", "'lowp'", "'mat2'", "'mat2x2'", 
      "'mat2x3'", "'mat2x4'", "'mat3'", "'mat3x2'", "'mat3x3'", "'mat3x4'", 
      "'mat4'", "'mat4x2'", "'mat4x3'", "'mat4x4'", "'mediump'", "'noperspective'", 
      "'out'", "'patch'", "'precise'", "'precision'", "'readonly'", "'restrict'", 
      "'return'", "'sample'", "'sampler'", "'sampler1D'", "'sampler1DArray'", 
      "'sampler1DArrayShadow'", "'sampler1DShadow'", "'sampler2D'", "'sampler2DArray'", 
      "'sampler2DArrayShadow'", "'sampler2DMS'", "'sampler2DMSArray'", "'sampler2DRect'", 
      "'sampler2DRectShadow'", "'sampler2DShadow'", "'sampler3D'", "'samplerBuffer'", 
      "'samplerCube'", "'samplerCubeArray'", "'samplerCubeArrayShadow'", 
      "'samplerCubeShadow'", "'samplerShadow'", "'shared'", "'smooth'", 
      "'struct'", "'subpassInput'", "'subpassInputMS'", "'subroutine'", 
      "'switch'", "'texture1D'", "'texture1DArray'", "'texture2D'", "'texture2DArray'", 
      "'texture2DMS'", "'texture2DMSArray'", "'texture2DRect'", "'texture3D'", 
      "'textureBuffer'", "'textureCube'", "'textureCubeArray'", "'true'", 
      "'uimage1D'", "'uimage1DArray'", "'uimage2D'", "'uimage2DArray'", 
      "'uimage2DMS'", "'uimage2DMSArray'", "'uimage2DRect'", "'uimage3D'", 
      "'uimageBuffer'", "'uimageCube'", "'uimageCubeArray'", "'uint'", "'uniform'", 
      "'usampler1D'", "'usampler1DArray'", "'usampler2D'", "'usampler2DArray'", 
      "'usampler2DMS'", "'usampler2DMSArray'", "'usampler2DRect'", "'usampler3D'", 
      "'usamplerBuffer'", "'usamplerCube'", "'usamplerCubeArray'", "'usubpassInput'", 
      "'usubpassInputMS'", "'utexture1D'", "'utexture1DArray'", "'utexture2D'", 
      "'utexture2DArray'", "'utexture2DMS'", "'utexture2DMSArray'", "'utexture2DRect'", 
      "'utexture3D'", "'utextureBuffer'", "'utextureCube'", "'utextureCubeArray'", 
      "'uvec2'", "'uvec3'", "'uvec4'", "'varying'", "'vec2'", "'vec3'", 
      "'vec4'", "'void'", "'volatile'", "'while'", "'writeonly'", "'+='", 
      "'&'", "'&='", "'&&'", "'!'", "'^'", "':'", "','", "'-'", "'--'", 
      "'/='", "'.'", "'=='", "'='", "'>='", "'++'", "'<='", "'<'", "'<<='", 
      "'{'", "'['", "'<<'", "'('", "'%='", "'*='", "'!='", "", "'|='", "'||'", 
      "'%'", "'+'", "'\\u003F'", "'>'", "'>>='", "'}'", "']'", "'>>'", "')'", 
      "';'", "'/'", "'*'", "'-='", "'~'", "'|'", "'^='", "'^^'", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "'debug'", "", "'off'", "'on'", "'optimize'", 
      "", "'STDGL'"
    },
    std::vector<std::string>{
      "", "ATOMIC_UINT", "ATTRIBUTE", "BOOL", "BREAK", "BUFFER", "BVEC2", 
      "BVEC3", "BVEC4", "CASE", "CENTROID", "COHERENT", "CONST", "CONTINUE", 
      "DEFAULT", "DISCARD", "DMAT2", "DMAT2X2", "DMAT2X3", "DMAT2X4", "DMAT3", 
      "DMAT3X2", "DMAT3X3", "DMAT3X4", "DMAT4", "DMAT4X2", "DMAT4X3", "DMAT4X4", 
      "DO", "DOUBLE", "DVEC2", "DVEC3", "DVEC4", "ELSE", "FALSE", "FLAT", 
      "FLOAT", "FOR", "HIGHP", "IF", "IIMAGE1D", "IIMAGE1DARRAY", "IIMAGE2D", 
      "IIMAGE2DARRAY", "IIMAGE2DMS", "IIMAGE2DMSARRAY", "IIMAGE2DRECT", 
      "IIMAGE3D", "IIMAGEBUFFER", "IIMAGECUBE", "IIMAGECUBEARRAY", "IMAGE1D", 
      "IMAGE1DARRAY", "IMAGE2D", "IMAGE2DARRAY", "IMAGE2DMS", "IMAGE2DMSARRAY", 
      "IMAGE2DRECT", "IMAGE3D", "IMAGEBUFFER", "IMAGECUBE", "IMAGECUBEARRAY", 
      "IN", "INOUT", "INT", "INVARIANT", "ISAMPLER1D", "ISAMPLER1DARRAY", 
      "ISAMPLER2D", "ISAMPLER2DARRAY", "ISAMPLER2DMS", "ISAMPLER2DMSARRAY", 
      "ISAMPLER2DRECT", "ISAMPLER3D", "ISAMPLERBUFFER", "ISAMPLERCUBE", 
      "ISAMPLERCUBEARRAY", "ISUBPASSINPUT", "ISUBPASSINPUTMS", "ITEXTURE1D", 
      "ITEXTURE1DARRAY", "ITEXTURE2D", "ITEXTURE2DARRAY", "ITEXTURE2DMS", 
      "ITEXTURE2DMSARRAY", "ITEXTURE2DRECT", "ITEXTURE3D", "ITEXTUREBUFFER", 
      "ITEXTURECUBE", "ITEXTURECUBEARRAY", "IVEC2", "IVEC3", "IVEC4", "LAYOUT", 
      "LOWP", "MAT2", "MAT2X2", "MAT2X3", "MAT2X4", "MAT3", "MAT3X2", "MAT3X3", 
      "MAT3X4", "MAT4", "MAT4X2", "MAT4X3", "MAT4X4", "MEDIUMP", "NOPERSPECTIVE", 
      "OUT", "PATCH", "PRECISE", "PRECISION", "READONLY", "RESTRICT", "RETURN", 
      "SAMPLE", "SAMPLER", "SAMPLER1D", "SAMPLER1DARRAY", "SAMPLER1DARRAYSHADOW", 
      "SAMPLER1DSHADOW", "SAMPLER2D", "SAMPLER2DARRAY", "SAMPLER2DARRAYSHADOW", 
      "SAMPLER2DMS", "SAMPLER2DMSARRAY", "SAMPLER2DRECT", "SAMPLER2DRECTSHADOW", 
      "SAMPLER2DSHADOW", "SAMPLER3D", "SAMPLERBUFFER", "SAMPLERCUBE", "SAMPLERCUBEARRAY", 
      "SAMPLERCUBEARRAYSHADOW", "SAMPLERCUBESHADOW", "SAMPLERSHADOW", "SHARED", 
      "SMOOTH", "STRUCT", "SUBPASSINPUT", "SUBPASSINPUTMS", "SUBROUTINE", 
      "SWITCH", "TEXTURE1D", "TEXTURE1DARRAY", "TEXTURE2D", "TEXTURE2DARRAY", 
      "TEXTURE2DMS", "TEXTURE2DMSARRAY", "TEXTURE2DRECT", "TEXTURE3D", "TEXTUREBUFFER", 
      "TEXTURECUBE", "TEXTURECUBEARRAY", "TRUE", "UIMAGE1D", "UIMAGE1DARRAY", 
      "UIMAGE2D", "UIMAGE2DARRAY", "UIMAGE2DMS", "UIMAGE2DMSARRAY", "UIMAGE2DRECT", 
      "UIMAGE3D", "UIMAGEBUFFER", "UIMAGECUBE", "UIMAGECUBEARRAY", "UINT", 
      "UNIFORM", "USAMPLER1D", "USAMPLER1DARRAY", "USAMPLER2D", "USAMPLER2DARRAY", 
      "USAMPLER2DMS", "USAMPLER2DMSARRAY", "USAMPLER2DRECT", "USAMPLER3D", 
      "USAMPLERBUFFER", "USAMPLERCUBE", "USAMPLERCUBEARRAY", "USUBPASSINPUT", 
      "USUBPASSINPUTMS", "UTEXTURE1D", "UTEXTURE1DARRAY", "UTEXTURE2D", 
      "UTEXTURE2DARRAY", "UTEXTURE2DMS", "UTEXTURE2DMSARRAY", "UTEXTURE2DRECT", 
      "UTEXTURE3D", "UTEXTUREBUFFER", "UTEXTURECUBE", "UTEXTURECUBEARRAY", 
      "UVEC2", "UVEC3", "UVEC4", "VARYING", "VEC2", "VEC3", "VEC4", "VOID", 
      "VOLATILE", "WHILE", "WRITEONLY", "ADD_ASSIGN", "AMPERSAND", "AND_ASSIGN", 
      "AND_OP", "BANG", "CARET", "COLON", "COMMA", "DASH", "DEC_OP", "DIV_ASSIGN", 
      "DOT", "EQ_OP", "EQUAL", "GE_OP", "INC_OP", "LE_OP", "LEFT_ANGLE", 
      "LEFT_ASSIGN", "LEFT_BRACE", "LEFT_BRACKET", "LEFT_OP", "LEFT_PAREN", 
      "MOD_ASSIGN", "MUL_ASSIGN", "NE_OP", "NUMBER_SIGN", "OR_ASSIGN", "OR_OP", 
      "PERCENT", "PLUS", "QUESTION", "RIGHT_ANGLE", "RIGHT_ASSIGN", "RIGHT_BRACE", 
      "RIGHT_BRACKET", "RIGHT_OP", "RIGHT_PAREN", "SEMICOLON", "SLASH", 
      "STAR", "SUB_ASSIGN", "TILDE", "VERTICAL_BAR", "XOR_ASSIGN", "XOR_OP", 
      "DOUBLECONSTANT", "FLOATCONSTANT", "INTCONSTANT", "UINTCONSTANT", 
      "BLOCK_COMMENT", "LINE_COMMENT", "LINE_CONTINUATION", "IDENTIFIER", 
      "WHITE_SPACE", "DEFINE_DIRECTIVE", "ELIF_DIRECTIVE", "ELSE_DIRECTIVE", 
      "ENDIF_DIRECTIVE", "ERROR_DIRECTIVE", "EXTENSION_DIRECTIVE", "IF_DIRECTIVE", 
      "IFDEF_DIRECTIVE", "IFNDEF_DIRECTIVE", "LINE_DIRECTIVE", "PRAGMA_DIRECTIVE", 
      "UNDEF_DIRECTIVE", "VERSION_DIRECTIVE", "SPACE_TAB_0", "NEWLINE_0", 
      "MACRO_NAME", "NEWLINE_1", "SPACE_TAB_1", "CONSTANT_EXPRESSION", "NEWLINE_2", 
      "ERROR_MESSAGE", "NEWLINE_3", "BEHAVIOR", "EXTENSION_NAME", "NEWLINE_4", 
      "SPACE_TAB_2", "NEWLINE_5", "MACRO_IDENTIFIER", "NEWLINE_6", "SPACE_TAB_3", 
      "LINE_EXPRESSION", "NEWLINE_7", "MACRO_ESC_NEWLINE", "MACRO_TEXT", 
      "NEWLINE_8", "DEBUG", "NEWLINE_9", "OFF", "ON", "OPTIMIZE", "SPACE_TAB_5", 
      "STDGL", "PROGRAM_TEXT", "NEWLINE_10", "SPACE_TAB_6", "NEWLINE_11", 
      "NUMBER", "PROFILE", "SPACE_TAB_7"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  glslpreparserParserStaticData = staticData.release();
}

}

GLSLPreParser::GLSLPreParser(TokenStream *input) : GLSLPreParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

GLSLPreParser::GLSLPreParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  GLSLPreParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *glslpreparserParserStaticData->atn, glslpreparserParserStaticData->decisionToDFA, glslpreparserParserStaticData->sharedContextCache, options);
}

GLSLPreParser::~GLSLPreParser() {
  delete _interpreter;
}

const atn::ATN& GLSLPreParser::getATN() const {
  return *glslpreparserParserStaticData->atn;
}

std::string GLSLPreParser::getGrammarFileName() const {
  return "GLSLPreParser.g4";
}

const std::vector<std::string>& GLSLPreParser::getRuleNames() const {
  return glslpreparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& GLSLPreParser::getVocabulary() const {
  return glslpreparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView GLSLPreParser::getSerializedATN() const {
  return glslpreparserParserStaticData->serializedATN;
}


//----------------- Translation_unitContext ------------------------------------------------------------------

GLSLPreParser::Translation_unitContext::Translation_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<GLSLPreParser::Compiler_directiveContext *> GLSLPreParser::Translation_unitContext::compiler_directive() {
  return getRuleContexts<GLSLPreParser::Compiler_directiveContext>();
}

GLSLPreParser::Compiler_directiveContext* GLSLPreParser::Translation_unitContext::compiler_directive(size_t i) {
  return getRuleContext<GLSLPreParser::Compiler_directiveContext>(i);
}


size_t GLSLPreParser::Translation_unitContext::getRuleIndex() const {
  return GLSLPreParser::RuleTranslation_unit;
}

void GLSLPreParser::Translation_unitContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTranslation_unit(this);
}

void GLSLPreParser::Translation_unitContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTranslation_unit(this);
}


std::any GLSLPreParser::Translation_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLPreParserVisitor*>(visitor))
    return parserVisitor->visitTranslation_unit(this);
  else
    return visitor->visitChildren(this);
}

GLSLPreParser::Translation_unitContext* GLSLPreParser::translation_unit() {
  Translation_unitContext *_localctx = _tracker.createInstance<Translation_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, GLSLPreParser::RuleTranslation_unit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == GLSLPreParser::NUMBER_SIGN) {
      setState(68);
      compiler_directive();
      setState(73);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Compiler_directiveContext ------------------------------------------------------------------

GLSLPreParser::Compiler_directiveContext::Compiler_directiveContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

GLSLPreParser::Define_directiveContext* GLSLPreParser::Compiler_directiveContext::define_directive() {
  return getRuleContext<GLSLPreParser::Define_directiveContext>(0);
}

GLSLPreParser::Elif_directiveContext* GLSLPreParser::Compiler_directiveContext::elif_directive() {
  return getRuleContext<GLSLPreParser::Elif_directiveContext>(0);
}

GLSLPreParser::Else_directiveContext* GLSLPreParser::Compiler_directiveContext::else_directive() {
  return getRuleContext<GLSLPreParser::Else_directiveContext>(0);
}

GLSLPreParser::Endif_directiveContext* GLSLPreParser::Compiler_directiveContext::endif_directive() {
  return getRuleContext<GLSLPreParser::Endif_directiveContext>(0);
}

GLSLPreParser::Error_directiveContext* GLSLPreParser::Compiler_directiveContext::error_directive() {
  return getRuleContext<GLSLPreParser::Error_directiveContext>(0);
}

GLSLPreParser::Extension_directiveContext* GLSLPreParser::Compiler_directiveContext::extension_directive() {
  return getRuleContext<GLSLPreParser::Extension_directiveContext>(0);
}

GLSLPreParser::If_directiveContext* GLSLPreParser::Compiler_directiveContext::if_directive() {
  return getRuleContext<GLSLPreParser::If_directiveContext>(0);
}

GLSLPreParser::Ifdef_directiveContext* GLSLPreParser::Compiler_directiveContext::ifdef_directive() {
  return getRuleContext<GLSLPreParser::Ifdef_directiveContext>(0);
}

GLSLPreParser::Ifndef_directiveContext* GLSLPreParser::Compiler_directiveContext::ifndef_directive() {
  return getRuleContext<GLSLPreParser::Ifndef_directiveContext>(0);
}

GLSLPreParser::Line_directiveContext* GLSLPreParser::Compiler_directiveContext::line_directive() {
  return getRuleContext<GLSLPreParser::Line_directiveContext>(0);
}

GLSLPreParser::Pragma_directiveContext* GLSLPreParser::Compiler_directiveContext::pragma_directive() {
  return getRuleContext<GLSLPreParser::Pragma_directiveContext>(0);
}

GLSLPreParser::Undef_directiveContext* GLSLPreParser::Compiler_directiveContext::undef_directive() {
  return getRuleContext<GLSLPreParser::Undef_directiveContext>(0);
}

GLSLPreParser::Version_directiveContext* GLSLPreParser::Compiler_directiveContext::version_directive() {
  return getRuleContext<GLSLPreParser::Version_directiveContext>(0);
}


size_t GLSLPreParser::Compiler_directiveContext::getRuleIndex() const {
  return GLSLPreParser::RuleCompiler_directive;
}

void GLSLPreParser::Compiler_directiveContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCompiler_directive(this);
}

void GLSLPreParser::Compiler_directiveContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCompiler_directive(this);
}


std::any GLSLPreParser::Compiler_directiveContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLPreParserVisitor*>(visitor))
    return parserVisitor->visitCompiler_directive(this);
  else
    return visitor->visitChildren(this);
}

GLSLPreParser::Compiler_directiveContext* GLSLPreParser::compiler_directive() {
  Compiler_directiveContext *_localctx = _tracker.createInstance<Compiler_directiveContext>(_ctx, getState());
  enterRule(_localctx, 2, GLSLPreParser::RuleCompiler_directive);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(87);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(74);
      define_directive();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(75);
      elif_directive();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(76);
      else_directive();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(77);
      endif_directive();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(78);
      error_directive();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(79);
      extension_directive();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(80);
      if_directive();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(81);
      ifdef_directive();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(82);
      ifndef_directive();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(83);
      line_directive();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(84);
      pragma_directive();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(85);
      undef_directive();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(86);
      version_directive();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BehaviorContext ------------------------------------------------------------------

GLSLPreParser::BehaviorContext::BehaviorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GLSLPreParser::BehaviorContext::BEHAVIOR() {
  return getToken(GLSLPreParser::BEHAVIOR, 0);
}


size_t GLSLPreParser::BehaviorContext::getRuleIndex() const {
  return GLSLPreParser::RuleBehavior;
}

void GLSLPreParser::BehaviorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBehavior(this);
}

void GLSLPreParser::BehaviorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBehavior(this);
}


std::any GLSLPreParser::BehaviorContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLPreParserVisitor*>(visitor))
    return parserVisitor->visitBehavior(this);
  else
    return visitor->visitChildren(this);
}

GLSLPreParser::BehaviorContext* GLSLPreParser::behavior() {
  BehaviorContext *_localctx = _tracker.createInstance<BehaviorContext>(_ctx, getState());
  enterRule(_localctx, 4, GLSLPreParser::RuleBehavior);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    match(GLSLPreParser::BEHAVIOR);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Constant_expressionContext ------------------------------------------------------------------

GLSLPreParser::Constant_expressionContext::Constant_expressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* GLSLPreParser::Constant_expressionContext::CONSTANT_EXPRESSION() {
  return getToken(GLSLPreParser::CONSTANT_EXPRESSION, 0);
}


size_t GLSLPreParser::Constant_expressionContext::getRuleIndex() const {
  return GLSLPreParser::RuleConstant_expression;
}

void GLSLPreParser::Constant_expressionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstant_expression(this);
}

void GLSLPreParser::Constant_expressionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<GLSLPreParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstant_expression(this);
}


std::any GLSLPreParser::Constant_expressionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<GLSLPreParserVisitor*>(visitor))
    return parserVisitor->visitConstant_expression(this);
  else
    return visitor->visitChildren(this);
}

GLSLPreParser::Constant_expressionContext* GLSLPreParser::constant_expression() {
  Constant_expressionContext *_localctx = _tracker.createInstance<Constant_expressionContext>(_ctx, getState());
  enterRule(_localctx, 6, GLSLPreParser::RuleConstant_expression);
